[UPDATE][update/api-stream-endpoint] change endpoint API stream mp3
